fix spacing and centering

--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -13,6 +13,18 @@
   @media only screen and (min-width: 800px) {
     background-image: url("/images/ashley_mountain.jpg");
     background-attachment: fixed;
+
+    .video-card-container {
+      justify-content: left;
+
+      .demo-card-image.mdl-card {
+        width: 403px;
+        height: 329px;
+        .description {
+          padding: 1.5em;
+        }
+      }
+    }
   }
 
   @media only screen and (min-width: $bp-large) {
@@ -29,17 +41,17 @@
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
-      justify-content: left;
+      justify-content: center;
       border-radius: 3em;
 
       .demo-card-image.mdl-card {
-        width: 403px;
-        height: 329px;
+        width: 315px;
+        height: 408px;
         border-radius: 3em;
 
         .description {
-          padding: 1.5em;
           width: 100%;
+          padding: 1em;
         }
 
         p {
